# arceos

./: Cargo.toml  search-index.js  src-files.js
apps/memtest/: expect_trace.out
arceos_api/: index.html
arceos_api/config/: constant.ARCH.html  constant.FAMILY.html  constant.KERNEL_BASE_PADDR.html  constant.KERNEL_BASE_VADDR.html  constant.MMIO_REGIONS.html  constant.PCI_BUS_END.html  constant.PCI_ECAM_BASE.html  constant.PCI_RANGES.html  constant.PHYS_MEMORY_BASE.html  constant.PHYS_MEMORY_SIZE.html  constant.PHYS_VIRT_OFFSET.html  constant.PLATFORM.html  constant.SMP.html  constant.TASK_STACK_SIZE.html  constant.TICKS_PER_SEC.html  constant.TIMER_FREQUENCY.html  constant.VIRTIO_MMIO_REGIONS.html
arceos_posix_api/config/: constant.ARCH.html  constant.FAMILY.html  constant.KERNEL_BASE_PADDR.html  constant.KERNEL_BASE_VADDR.html  constant.MMIO_REGIONS.html  constant.PCI_BUS_END.html  constant.PCI_ECAM_BASE.html  constant.PCI_RANGES.html  constant.PHYS_MEMORY_BASE.html  constant.PHYS_MEMORY_SIZE.html  constant.PHYS_VIRT_OFFSET.html  constant.PLATFORM.html  constant.SMP.html  constant.TASK_STACK_SIZE.html  constant.TICKS_PER_SEC.html  constant.TIMER_FREQUENCY.html  constant.VIRTIO_MMIO_REGIONS.html
arceos_posix_api/ctypes/: struct.sockaddr_in.html  struct.timespec.html  struct.timeval.html
axalloc/: index.html
axconfig/: constant.ARCH.html  constant.FAMILY.html  constant.KERNEL_BASE_PADDR.html  constant.KERNEL_BASE_VADDR.html  constant.MMIO_REGIONS.html  constant.PCI_BUS_END.html  constant.PCI_ECAM_BASE.html  constant.PCI_RANGES.html  constant.PHYS_MEMORY_BASE.html  constant.PHYS_MEMORY_SIZE.html  constant.PHYS_VIRT_OFFSET.html  constant.PLATFORM.html  constant.SMP.html  constant.TASK_STACK_SIZE.html  constant.TICKS_PER_SEC.html  constant.TIMER_FREQUENCY.html  constant.VIRTIO_MMIO_REGIONS.html  index.html
axdisplay/: index.html
axdriver/: index.html
axdriver/prelude/: trait.BaseDriverOps.html  trait.BlockDriverOps.html
axerrno/: enum.AxError.html  enum.LinuxError.html  index.html
axfs/: index.html
axfs_devfs/: index.html
axfs_ramfs/: index.html
axfs_vfs/: index.html  struct.VfsNodePerm.html
axhal/: index.html
axhal/console/: fn.write_bytes.html  index.html
axhal/mem/: index.html  struct.MemRegionFlags.html
axhal/misc/: index.html
axhal/mp/: index.html
axmm/: struct.AddrSpace.html
axruntime/: index.html
axstd/time/: struct.Duration.html  struct.Instant.html
axsync/: index.html
axtask/: index.html  type.AxTaskRef.html
capability/: struct.Cap.html
crates/memory_addr/: Cargo.toml  README.md
crates/memory_set/: Cargo.toml
crates/memory_set/src/: area.rs  lib.rs  tests.rs
driver_common/: index.html
driver_pci/: struct.PciRoot.html
driver_virtio/: struct.MmioTransport.html  struct.PciTransport.html
driver_virtio/pci/: struct.BusDeviceIterator.html  struct.CapabilityIterator.html  struct.PciRoot.html
modules/axhal/: Cargo.toml  linker.lds.S
modules/axmm/: Cargo.toml
modules/axmm/src/: aspace.rs  backend.rs  lib.rs
modules/axmm/src/backend/: alloc.rs  linear.rs
modules/axruntime/: Cargo.toml
page_table_entry/: struct.MappingFlags.html
page_table_entry/aarch64/: struct.DescriptorAttr.html
page_table_entry/riscv/: struct.PTEFlags.html
variants/monolithic/: Cargo.toml
variants/monolithic/src/: main.rs  syscall.rs  task.rs
(+57 files in other folders)
