[package]
name = "arceos-monolithic"
version = "0.1.0"
edition = "2021"

[dependencies]
axstd = { path = "../../ulib/axstd", features = ["paging"] }
axhal = { path = "../../modules/axhal", features = ["uspace"] }
axlog = { path = "../../modules/axlog" }
axconfig = { path = "../../modules/axconfig" }
axtask = { path = "../../modules/axtask" }
axruntime = { path = "../../modules/axruntime", features = ["multitask"] }
memory_addr = { path = "../../crates/memory_addr" }
