[package]
name = "arceos-monolithic"
version = "0.1.0"
edition = "2021"

[dependencies]
axstd = { path = "../../ulib/axstd", features = ["paging"] }
arceos_posix_api = { path = "../../api/arceos_posix_api" }

axhal = { path = "../../modules/axhal", features = ["uspace"] }
axlog = { path = "../../modules/axlog" }
axconfig = { path = "../../modules/axconfig" }
axtask = { path = "../../modules/axtask" }
axsync = { path = "../../modules/axsync" }
axruntime = { path = "../../modules/axruntime", features = ["multitask"] }

axerrno = { path = "../../crates/axerrno" }
memory_addr = { path = "../../crates/memory_addr" }
crate_interface = { path = "../../crates/crate_interface" }
